[revise] fix nabar size and mobile collapse; temporarily hide counter-people amount

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -36,7 +36,7 @@ $navbar-text-hover: $white;
 
     > li > a {
       min-width: 10rem;
-      padding: 11.5px 15px;
+      padding: 11px 15px;
       color: $navbar-text-color;
       background-color: $navbar-bg-color;
       font-size: 1.7rem;
